<resources>
    <string name="app_name">Games DB Fan</string>
    <string name="title_login">Login</string>
    <string name="title_home">Home</string>
    <string name="title_detail">Detalle</string>
    <string name="title_fav">Favoritos</string>
    <string name="fav_button">Fav</string>
    <string name="search_button">Busqueda exacta.</string>
    <string name="reload_home_button">Recargar juegos.</string>
    <string name="search_close_button">Cerrar</string>
    <string name="placeholder_search_input">Buscar juegos...</string>
    <string name="placeholder_searchFav_input">Buscar en tus favoritos...</string>
    <string name="steam_button">Home</string>
    <string name="theme_button">Theme</string>
    <string name="login_button">Iniciar sesión con Google</string>
    <string name="title_activity_login">Login</string>
    <string name="title">Titulo</string>
    <string name="title_descripcion">Descripcion</string>
    <string name="title_informacion">Informacion</string>
    <string name="title_requisitos_minimos">Requisitos Minimos</string>
    <string name="title_requisitos_recomendados">Requisitos Recomendados</string>
    <string name="proximamente">Proximamente…</string>
    <string name="contenido">Contenido…</string>
    <string name="SO">Sistema Operativo:</string>
    <string name="Procesador">Procesador:</string>
    <string name="Memoria">Memoria:</string>
    <string name="Graphic">Graficos:</string>
    <string name="Almacenamiento">Almacenamiento:</string>
    <string name="error_detalles_empty">El juego no tiene detalles cargados o no tenes conexion a internet.</string>
    <string name="boton_add_bookmark_detail">Boton AddBookmark</string>
    <string name="text_count">count</string>
    <string name="text_error">Texto de error.</string>
    <string name="games_count">Total de juegos:</string>
    <string name="ClearCache">Borrar Cache</string>
    <string name="title_config">Configuraciones</string>
    <string name="button_view_game">Ver juego</string>
    <string name="button_view_dlc">Ver dlc</string>
    <string name="button_view_soundtrack">Ver soundtrack</string>
    <string name="button_view_demo">Ver demo</string>
    <string name="buy_dlc">Comprar DLC</string>
    <string name="buy_soundtrack">Comprar Soundtrack</string>
    <string name="price_usd_title">Precio en USD:</string>

    <string name="title_fecha_lanzamiento">Fecha de lanzamiento:</string>
    <string name="title_precio_descuento">Precio con descuento:</string>
    <string name="title_precio_sin_descuento">Precio sin descuento:</string>
    <string name="title_precio_dolar_tarjeta">Dolar Tarjeta en Pesos:</string>
    <string name="comprar_juego_button">Comprar juego</string>
    <string name="descuento">85%</string>
    <string name="precio_usd">$ 0 USD</string>
    <string name="precio_arg">$ 0 ARG</string>
    <string name="fecha">8 Feb, 2018</string>

    <!-- Login Google -->
    <string name="google_sign_in_failed">Fallo en el inicio de sesión de Google: %1$d %2$s</string>
    <string name="google_sign_in_failed_generic">Fallo en el inicio de sesión de Google</string>
    <string name="account_created_successfully">Cuenta creada exitosamente…</string>
    <string name="welcome_back">Bienvenido %1$s</string>
    <string name="login_failed">Login fallido: %1$s</string>

    <!-- Errores del buscador -->
    <string name="error1">No se encontro ningun juego con ese nombre.</string>
    <string name="error2">El campo de busqueda esta vacio.</string>
    <string name="error3">Error de conexión. Por favor, verifica tu conexión a internet e intenta nuevamente.</string>
    <string name="theme_label">Template</string>
    <string name="logout">Cerrar sesion</string>

    <!-- Configuraciones -->
    <string name="select_language" translatable="false">Seleccionar Idioma</string>
    <string name="english" translatable="false">Ingles</string>
    <string name="spanish" translatable="false">Español</string>
    <string name="portuguese" translatable="false">Portugués</string>
    <string name="unknown_language" translatable="false">Idioma no encontrado</string>
    <string name="welcome_message">Bienvenido %1$s a las configuraciones de la app.</string>
    <string name="default_welcome_message">Bienvenido a las configuraciones de la app.</string>
    <string name="selected_language_toast">Seleccionaste: %1$s</string>
    <string name="sign_in_failed">Inicio de sesión fallido</string>
    <string name="no_profile_image">No se encontró imagen de perfil</string>
    <string name="cache_cleared">Eliminaste toda la cache.</string>
    <string name="no_cache_cleared">No hay cache.</string>

    <!-- Data Source -->
    <string name="favorite_added">Agregaste - %1$s - de favoritos.</string>
    <string name="favorite_removed">Eliminaste - %1$s - de favoritos.</string>
    <string name="no_game_data">El juego - %1$s - no tiene datos.</string>
    <string name="cache_removed">Eliminaste - %1$s - de la caché del celular.</string>
</resources>