<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ConfigActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/Games_Details_background"
        android:minHeight="?attr/actionBarSize"
        android:textAlignment="center"
        android:theme="?attr/actionBarTheme"
        android:tooltipText="Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium">

        <!-- ImageButton para el botón de retroceso -->
        <ImageButton
            android:id="@+id/logout_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/steam_button"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/back"
            tools:ignore="ContentDescription,DuplicateSpeakableTextCheck,TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="5dp" />

        <!-- TextView para el título -->
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/title_config"
            android:textColor="@color/title_text"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="18dp" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/LinearConfig"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/appBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <LinearLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        android:background="@color/Games_Details_background"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Botón 1 -->
        <ImageButton
            android:id="@+id/fabButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:contentDescription="@string/fav_button"
            android:padding="16dp"
            android:scaleType="centerInside"
            android:src="@drawable/tabbookmark" />

        <!-- Espacio para separar los botones -->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- Botón 2 -->
        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/app_name"
            android:padding="16dp"
            android:scaleType="centerInside"
            android:src="@drawable/hometabactive" />

        <!-- Espacio para separar los botones -->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- Botón 3 -->
        <ImageButton
            android:id="@+id/themeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00881A1A"
            android:contentDescription="@string/theme_button"
            android:padding="16dp"
            android:scaleType="centerInside"
            android:src="@drawable/themelighttab" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>