<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookmarkActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_dark_background"
        android:minHeight="?attr/actionBarSize"
        android:textAlignment="center"
        android:theme="?attr/actionBarTheme"
        android:tooltipText="Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitleTextColor="@color/md_theme_dark_inverseSurface"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:titleTextColor="@color/md_theme_dark_onErrorContainer">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/steam_button"
            android:onClick="onBackClick"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/back"
            tools:ignore="ContentDescription,DuplicateSpeakableTextCheck"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/title_fav"
            android:textColor="@color/title_dark_text"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="18dp" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:cardBackgroundColor="@color/md_theme_light_inverseSurface"
            app:cardCornerRadius="16dp">

            <SearchView
                android:id="@+id/searchInputBookmark"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:forceDarkAllowed="false"
                android:iconifiedByDefault="false"
                android:queryBackground="@null"
                android:queryHint="@string/placeholder_search_button"
                android:theme="@style/Base.Theme.Steam.Dark" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/buttonSearchBookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/md_theme_light_onTertiaryContainer"
            android:text="@string/search_button"
            android:textColor="@color/md_theme_dark_inverseSurface" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        android:background="@color/title_dark_background"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Botón 1 -->
        <ImageButton
            android:id="@+id/fabButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/fav_button"
            android:padding="16dp"
            android:scaleType="centerInside"
            android:src="@drawable/tabbookmarkactive"
            tools:ignore="VisualLintBounds" />

        <!-- Espacio para separar los botones -->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- Botón 2 -->
        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:contentDescription="@string/steam_button"
            android:layout_marginStart="30dp"
            android:onClick="onHomeClick"
            android:padding="16dp"
            android:scaleType="centerInside"
            android:src="@drawable/homesteamtab" />

        <!-- Espacio para separar los botones -->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- Botón 3 -->
        <ImageButton
            android:id="@+id/themeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:contentDescription="@string/theme_button"
            android:onClick="onChangeThemeButtonClick"
            android:padding="16dp"
            android:scaleType="centerInside"
            android:src="@drawable/themedarktab"
            tools:ignore="VisualLintBounds" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>